kubernetes/kubernetes-simple-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-namespace-fuyuko-simple
