kubernetes/k8s-fuyuko-fe-loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: kubernetes-loadbalancer-fuyuko-fe
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "7c901bd8-b215-4d67-9a22-28d6a6f6d4eb"
spec:
  type: LoadBalancer
  selector:
    app: kubernetes-pod-fuyuko-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 80
      name: https
